frontend/public/stylesheets/session.css
.session-page {
    padding-top: 50px;
}

.session-form h3 {
    text-transform: capitalize;
    font-size: x-large;
    padding-bottom: 50px;
    
}

.session-form {
    border: 1px solid gold;
    background-color: rgb(26, 26, 26);
    padding: 25px 25px 25px 25px;
    width: 500px;
    height: 350px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    
}

.session-form p {
    display: flex;
    float: left;
    padding: 10px 10px 10px 10px;
}

.session-form input {
    display: flex;
    float: right;
    padding: 8px 8px 8px 8px;
}

::placeholder {
    color: rgb(73, 72, 72);
}

input:focus {
    border: 3px solid gold;
}

.session-form button {
    width: 100px;
    align-self: center;
    color: black;
    font-weight: bold;
    background-color: gold;
    height: 30px;
    font-size: 15px;
    margin-top: 50px;
}

.session-form button:hover {
    background-image: linear-gradient(to top right, gold, white);
    cursor: pointer;
}

